https://test.kuali.org/jira/browse/KRAFUNC-265, https://test.kuali.org/jira/browse/KRAFUNC-226, https://test.kuali.org/jira/browse/KRAFUNC-246, https://test.kuali.org/jira/browse/KRAFUNC-110, and https://test.kuali.org/jira/browse/KRAFUNC-245 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6726 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-parameters.html
+++ b/kra-awa-dev/abud-parameters.html
@@ -131,13 +131,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <th style="text-align:right;">Budget Version:</th>
                         <td>3</td>
                         <th style="text-align:right;">Obligated Total:</th>
-                        <td style="text-align:right; padding-right:10px;">$100,000.00</td>
+                        <td>397,979.12</td>
                     </tr>
                     <tr>
                         <th style="text-align:right;">Budget Type:</th>
                         <td>Increase</td>
                         <th style="text-align:right;">Budget Change Total Cost Limit:</th>
-                        <td style="text-align:right; padding-right:10px;">$15,000.00</td>
+                        <td>345,771.93</td>
                     </tr>
                     <tr>
                         <th style="text-align:right;">Budget Status:</th>
@@ -158,12 +158,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <th style="text-align:right;">On/Off Campus:</th>
                         <td>
                             <select id="onoffcampus">
-                                <option value="1">all on</option>
-                                <option value="2">all off</option>
+                                <option value="1">All On</option>
+                                <option value="2">All Off</option>
                                 <option value="3" selected="selected">Default</option>
                             </select>
                         </td>
-                        <th style="text-align:right;">F&amp;A rate Type</th>
+                        <th style="text-align:right;">F&amp;A Rate Type</th>
                         <td>MTDC</td>
                     </tr>
                     <tr>
@@ -316,7 +316,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                 <input type="text" style="width:98%; text-align:right;" value="125,000.00" />
                             </td>
                             <td style="text-align:center;">
-                            	<input src="../images/tinybutton-delete2.gif" onclick="javascript: alert('Please let Bart know why this is grayed out.'); return false" style="border:none;" alt="delete" title="Delete" type="image" />
+                            	<input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would delete the associated data row.'); return false" style="border:none;" alt="delete" title="Delete" type="image" />
                             </td>
                         </tr>
                         <tr>
@@ -548,22 +548,22 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                 08/31/2014
                             </td>
                            	<td style="text-align:right; font-weight:bold;">
-                                $16,496.05
+                                16,496.05
                             </td>
                             <td style="text-align:right; font-weight:bold;">
-                                $13,196.84
+                                13,196.84
                             </td>
                             <td style="text-align:right; font-weight:bold;">
-                                $3,299.21
+                                3,299.21
                             </td>
                             <td style="text-align:right; font-weight:bold;">
-                                $1,319.68
+                                1,319.68
                             </td>
                             <td style="text-align:right; font-weight:bold;">
-                                $31,725.86
+                                31,725.86
                             </td>
                             <td style="text-align:right; font-weight:bold;">
-                                $127,667.00
+                                127,667.00
                             </td>
                             <td style="text-align:center; vertical-align:middle;" rowspan="3">
                             	<input src="../images/tinybutton-recalculate.gif" onclick="javascript: alert('This would recalculate the associated totals.'); return false" style="border:none;" alt="recalculate" title="Recalculate" type="image" />
@@ -578,22 +578,22 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                 03/31/2014
                             </td>
                            	<td style="text-align:right;">
-                                $18,750.00
+                                18,750.00
                             </td>
                             <td style="text-align:right;">
-                                $15,000.00
+                                15,000.00
                             </td>
                             <td style="text-align:right;">
-                                $3,750.00
+                                3,750.00
                             </td>
                             <td style="text-align:right;">
-                                $1,500.00
+                                1,500.00
                             </td>
                             <td style="text-align:right;">
-                                $75,000.00
+                                75,000.00
                             </td>
                             <td style="text-align:right;">
-                                $350,000.00
+                                350,000.00
                             </td>
                         </tr>
                         <tr>
@@ -605,22 +605,22 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                 08/31/2014
                             </td>
                            	<td style="text-align:right; font-weight:bold;">
-                                $35,246.05
+                                35,246.05
                             </td>
                             <td style="text-align:right; font-weight:bold;">
-                                $28,196.84
+                                28,196.84
                             </td>
                             <td style="text-align:right; font-weight:bold;">
-                                $7,049.21
+                                7,049.21
                             </td>
                             <td style="text-align:right; font-weight:bold;">
-                                $2,819.68
+                                2,819.68
                             </td>
                             <td style="text-align:right; font-weight:bold;">
-                                $106,725.86
+                                106,725.86
                             </td>
                             <td style="text-align:right; font-weight:bold;">
-                                $477,667.00
+                                477,667.00
                             </td>
                         </tr>
                 
