--- a/kra-awa-dev/abud-rates.html
+++ b/kra-awa-dev/abud-rates.html
@@ -154,10 +154,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td> 2008</td>
                   <td>1</td>
                   <td> 07/01/2008</td>
-                  <td> <div align="center">8.0 </div></td>
-                  <td align="center">                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[0].applicableRate_wmc" type="text" onchange="dataChanged()" value="8.0"  />                  
-                  </div></td>
+                  <td><div align="center">8.0</div></td>
+                  <td align="center"><div align="center">8.0</div></td>
                 </tr>
                 <tr >
                   <td> MTDC </td>
@@ -166,9 +164,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1</td>
                   <td> 07/01/2008</td>
                   <td> <div align="center">65.0 </div></td>
-                  <td align="center">                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[1].applicableRate_wmc" value="65.0" onchange="dataChanged()" type="text" />                  
-                  </div></td>
+                  <td align="center"><div align="center">65.0</div></td>
                 </tr>
                 <tr >
                   <td> TDC </td>
@@ -177,9 +173,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2008</td>
                   <td> <div align="center">0.0 </div></td>
-                  <td align="center">                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[2].applicableRate_wmc" value="0.0" onchange="dataChanged()" type="text" />                  
-                  </div></td>
+                  <td align="center"><div align="center">0.0</div></td>
                 </tr>
                 <tr >
                   <td> TDC </td>
@@ -188,9 +182,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2008</td>
                   <td> <div align="center">0.0 </div></td>
-                  <td align="center">                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[3].applicableRate_wmc" value="0.0" onchange="dataChanged()" type="text" />                  
-                  </div></td>
+                  <td align="center"><div align="center">0.0</div></td>
                 </tr>
                 <tr >
                   <td> S&amp;W </td>
@@ -199,9 +191,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>2</td>
                   <td> 07/01/2009 </td>
                   <td> <div align="center">47.0 </div></td>
-                  <td align="center">                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[4].applicableRate_wmc" value="47.0" onchange="dataChanged()" type="text" />                  
-                  </div></td>
+                  <td align="center"><div align="center">47.0</div></td>
                 </tr>
                 <tr >
                   <td> S&amp;W </td>
@@ -210,9 +200,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>2</td>
                   <td> 07/01/2009 </td>
                   <td> <div align="center">47.0 </div></td>
-                  <td align="center">                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[5].applicableRate_wmc" value="47.0" onchange="dataChanged()" type="text" />                  
-                  </div></td>
+                  <td align="center"><div align="center">47.0</div></td>
                 </tr>
                 <tr >
                   <td> Salaries </td>
@@ -221,9 +209,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2008</td>
                   <td> <div align="center">8.0 </div></td>
-                  <td>                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[6].applicableRate_wmc" value="8.0" onchange="dataChanged()" type="text" />                  
-                  </div></td>
+                  <td><div align="center">8.0</div></td>
                 </tr>
                 <tr >
                   <td> Salaries </td>
@@ -232,9 +218,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2008</td>
                   <td> <div align="center">65.0 </div></td>
-                  <td align="center">                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[7].applicableRate_wmc" value="65.0" onchange="dataChanged()" type="text" />                  
-                  </div></td>
+                  <td align="center"><div align="center">65.0</div></td>
                 </tr>
                 <tr >
                   <td> Materials and Services </td>
@@ -243,9 +227,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2008</td>
                   <td> <div align="center">10.0 </div></td>
-                  <td align="center">                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[8].applicableRate_wmc" value="10.0" onchange="dataChanged()" type="text" />                  
-                  </div></td>
+                  <td align="center"><div align="center">10.0</div></td>
                 </tr>
                 <tr >
                   <td> Materials and Services </td>
@@ -254,9 +236,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1</td>
                   <td> 07/01/2008</td>
                   <td> <div align="center">10.0 </div></td>
-                  <td>                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[9].applicableRate_wmc" value="10.0" onchange="dataChanged()" type="text" />                  
-                  </div></td>
+                  <td><div align="center">10.0</div></td>
                 </tr>
                 <tr >
                   <td> Materials and Services </td>
@@ -265,9 +245,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1</td>
                   <td> 07/01/2008 </td>
                   <td> <div align="center">10.0 </div></td>
-                  <td>                    <div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[10].applicableRate_wmc" value="10.0" onchange="dataChanged()" type="text" />                  
-                  </div></td>
+                  <td><div align="center">10.0</div></td>
                 </tr>
                 <tr >
                   <td colspan="7" class="infoline"><div align="center">
@@ -307,10 +285,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2009</td>
                   <td> <div align="center">24.0 </div></td>
-                  <td>
-                    <div align="center">
-                      <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[12].applicableRate_wmc" value="24.0" onchange="dataChanged()" type="text" />
-                    </div></td>
+                  <td><div align="center">24.0</div></td>
                 </tr>
                 <tr >
                   <td> Research Rate </td>
@@ -319,10 +294,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2009</td>
                   <td> <div align="center">27.0 </div></td>
-                  <td>
-                    <div align="center">
-                      <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[13].applicableRate_wmc" value="27.0" onchange="dataChanged()" type="text" />
-                    </div></td>
+                  <td><div align="center">27.0</div></td>
                 </tr>
                 <tr >
                   <td> UROP Rate </td>
@@ -331,10 +303,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2009</td>
                   <td> <div align="center">0.0 </div></td>
-                  <td>
-                    <div align="center">
-                      <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[14].applicableRate_wmc" value="0.0" onchange="dataChanged()" type="text" />
-                    </div></td>
+                  <td><div align="center">0.0</div></td>
                 </tr>
                 <tr >
                   <td> UROP Rate </td>
@@ -343,10 +312,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2009</td>
                   <td> <div align="center">0.0 </div></td>
-                  <td>
-                    <div align="center">
-                      <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[15].applicableRate_wmc" value="0.0" onchange="dataChanged()" type="text" />
-                    </div></td>
+                  <td><div align="center">0.0</div></td>
                 </tr>
                 <tr >
                   <td> EB on LA </td>
@@ -355,10 +321,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2009</td>
                   <td> <div align="center">24.0 </div></td>
-                  <td>
-                    <div align="center">
-                      <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[16].applicableRate_wmc" value="24.0" onchange="dataChanged()" type="text" />
-                    </div></td>
+                  <td><div align="center">24.0</div></td>
                 </tr>
                 <tr >
                   <td> EB on LA </td>
@@ -367,10 +330,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2009</td>
                   <td> <div align="center">27.0 </div></td>
-                  <td>
-                    <div align="center">
-                      <input id ="applicable rate2" size="6" name="applicable rate" value="27.0" onchange="dataChanged()" type="text" />
-                    </div></td>
+                  <td><div align="center">27.0</div></td>
                 </tr>
                 <tr >
                   <td class="infoline" colspan="7"><div align="center"><img src="../images/tinybutton-syncrates.gif" alt="show/hide this panel" width=62 height=15 hspace="5" vspace="5" border=0><img src="../images/tinybutton-resetrates.gif" alt="show/hide this panel" width=67 height=15 hspace="5" vspace="5" border=0></div></td>
@@ -441,9 +401,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td> 07/01/2008</td>
                   <td> 9.5 </td>
-                  <td><div align="center">
-                    <input id ="applicable rate3" size="6" name="budgetProposalRate_wmc[49].applicableRate_wmc" value="9.5" onchange="dataChanged()" type="text" />
-                  </div></td>
+                  <td>
+                  	<div align="center">
+                    	<input id ="applicable rate3" style="text-align:right;" size="6" name="budgetProposalRate_wmc[49].applicableRate_wmc" value="9.5" onchange="dataChanged()" type="text" />
+                  	</div>
+                  </td>
                 </tr>
                 <tr >
                   <td class="infoline" colspan="7"><div align="center"><img src="../images/tinybutton-syncrates.gif" alt="show/hide this panel" width=62 height=15 hspace="5" vspace="5" border=0><img src="../images/tinybutton-resetrates.gif" alt="show/hide this panel" width=67 height=15 hspace="5" vspace="5" border=0></div></td>
@@ -481,10 +443,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td></td>
                   <td> 07/01/2008</td>
-                  <td> 0.0 </td>
-                  <td><div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[50].applicableRate_wmc" value="0.0" onchange="dataChanged()" type="text" />
-                  </div></td>
+                  <td>
+                  	<div align="center">
+                    	<input id ="applicable rate4" style="text-align:right;" size="6" name="budgetProposalRate_wmc[49].applicableRate_wmc" value="0.0" onchange="dataChanged()" type="text" />
+                  	</div>
+                  </td>
                 </tr>
                 <tr >
                   <td> Other </td>
@@ -493,10 +456,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>1,2</td>
                   <td></td>
                   <td> 07/01/2008</td>
-                  <td> 0.0 </td>
-                  <td><div align="center">
-                    <input id ="applicable rate" style="text-align:right;" size="6" name="budgetProposalRate_wmc[51].applicableRate_wmc" value="0.0" onchange="dataChanged()" type="text" />
-                  </div></td>
+                  <td>
+                  	<div align="center">
+                    	<input id ="applicable rate5" style="text-align:right;" size="6" name="budgetProposalRate_wmc[49].applicableRate_wmc" value="0.0" onchange="dataChanged()" type="text" />
+                  	</div>
+                  </td>
                 </tr>
                 <tr >
                   <td class="infoline" colspan="8"><div align="center"><img src="../images/tinybutton-syncrates.gif" alt="show/hide this panel" width=62 height=15 hspace="5" vspace="5" border=0><img src="../images/tinybutton-resetrates.gif" alt="show/hide this panel" width=67 height=15 hspace="5" vspace="5" border=0></div></td>
