--- a/kra-awa-dev/aw-actions.html
+++ b/kra-awa-dev/aw-actions.html
@@ -1561,7 +1561,9 @@
                 <tbody >
                   <tr>
                     <th style="vertical-align:top; width:150px; text-align:left;"> Award Notice </th>
-                    <td><table style="border:none;">
+                    <td>
+                    
+                    	<table style="border:none;">
                         <tr>
                           <td style="border:none; white-space:nowrap; padding:3px; vertical-align:top;"><input type="checkbox" class="nobord" name="CustomData0" value="0" checked="checked" />
                             Address List<br />
@@ -1609,8 +1611,12 @@
                             <input name="selectall" src="../images/tinybutton-selectall.gif" onclick="javascript: alert('selects all award notice checkboxes'); return false" class="tinybutton" alt="select all" type="image" />
                             <input name="selectnone" src="../images/tinybutton-selectnone.gif" onclick="javascript: alert('deselects all award notice checkboxes'); return false" class="tinybutton" alt="select none" type="image" /></td>
                         </tr>
-                      </table></td>
-                    <td style="text-align:center; width:115px;"><input name="awardnotice" type="checkbox" class="nobord" id="awardnotice"></td>
+                      </table>
+                      
+                      </td>
+                    <td style="text-align:center; width:65px;">
+                    	<input src="../images/tinybutton-print.gif" onclick="javascript: alert('This would print the associated document(s).'); return false" style="border:none;" alt="print" title="Print" type="image" />
+                    </td>
                   </tr>
                   <tr>
                     <th style="vertical-align:top; text-align:left;"> Award Change Report </th>
@@ -1634,31 +1640,39 @@
                             <input type="checkbox" class="nobord" name="Csigreq" value="0" checked="checked" /></td>
                         </tr>
                       </table></td>
-                    <td style="text-align:center;"><input name="changereport" type="checkbox" class="nobord" id="changereport"></td>
+                    <td style="text-align:center;">
+                    	<input src="../images/tinybutton-print.gif" onclick="javascript: alert('This would print the associated document.'); return false" style="border:none;" alt="print" title="Print" type="image" />
+                    </td>
                   </tr>
                   <tr>
                     <th colspan="2" style="text-align:left;">Award Hierarchy</th>
-                    <td style="text-align:center;"><input name="budgethierarchy" type="checkbox" class="nobord" id="budgethierarchy"></td>
+                    <td style="text-align:center;">
+                    	<input src="../images/tinybutton-print.gif" onclick="javascript: alert('This would print the associated document.'); return false" style="border:none;" alt="print" title="Print" type="image" />
+                    </td>
                   </tr>
                   <tr>
                     <th colspan="2" style="text-align:left;">Award Hierarchy Modification</th>
-                    <td style="text-align:center;"><input name="modstobudhist" type="checkbox" class="nobord" id="modstobudhist"></td>
+                    <td style="text-align:center;">
+                    	<input src="../images/tinybutton-print.gif" onclick="javascript: alert('This would print the associated document.'); return false" style="border:none;" alt="print" title="Print" type="image" />
+                    </td>
                   </tr>
                   <tr>
                     <th colspan="2" style="text-align:left;">Budget</th>
-                    <td style="text-align:center;"><input name="budget" type="checkbox" class="nobord" id="budget"></td>
+                    <td style="text-align:center;">
+                    	<input src="../images/tinybutton-print.gif" onclick="javascript: alert('This would print the associated document.'); return false" style="border:none;" alt="print" title="Print" type="image" />
+                    </td>
                   </tr>
                   <tr>
                     <th colspan="2" style="text-align:left;">Time &amp; Money History</th>
-                    <td style="text-align:center;"><input name="timemoneyhistory" type="checkbox" class="nobord" id="timemoneyhistory"></td>
+                    <td style="text-align:center;">
+                    	<input src="../images/tinybutton-print.gif" onclick="javascript: alert('This would print the associated document.'); return false" style="border:none;" alt="print" title="Print" type="image" />
+                    </td>
                   </tr>
                   <tr>
                     <th colspan="2" style="text-align:left;">Transaction Detail</th>
-                    <td style="text-align:center;"><input name="transactiondetail" type="checkbox" class="nobord" id="transactiondetail"></td>
-                  </tr>
-                  <tr>
-                    <td colspan="2" class="infoline" style="text-align:center;"><img src="../images/tinybutton-printsel.gif" alt="dsdfhg" width="80" height="15" vspace="5"></td>
-                    <td class="infoline" style="text-align:center;"> Select (<a href="#">all</a> | <a href="#">none</a>) </td>
+                    <td style="text-align:center;">
+                    	<input src="../images/tinybutton-print.gif" onclick="javascript: alert('This would print the associated document.'); return false" style="border:none;" alt="print" title="Print" type="image" />
+                    </td>
                   </tr>
                 </tbody>
               </table>
