--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -7719,7 +7719,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G634" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description*</div></th>
+                    <th><div align="left">*Description</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7746,7 +7746,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G345b" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description*</div></th>
+                    <th><div align="left">*Description</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7773,7 +7773,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G334" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description*</div></th>
+                    <th><div align="left">*Description</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7835,7 +7835,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G734" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description*</div></th>
+                    <th><div align="left">*Description</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7862,7 +7862,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G567b" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description*</div></th>
+                    <th><div align="left">*Description</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7889,7 +7889,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G994" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description*</div></th>
+                    <th><div align="left">*Description</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7916,7 +7916,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G884" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description*</div></th>
+                    <th><div align="left">*Description</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7943,7 +7943,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G774" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description*</div></th>
+                    <th><div align="left">*Description</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7970,7 +7970,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G664" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description*</div></th>
+                    <th><div align="left">*Description</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
