[BFN] https://test.kuali.org/jira/browse/KRAFUNC-247 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6734 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-summary.html
+++ b/kra-awa-dev/abud-summary.html
@@ -632,13 +632,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td class="infoline"><div align="right"><strong>497,694.00</strong> </div></td>
             </tr>
             <tr>
-              <td colspan="2" align="left" class="infoline"><strong>COST LIMITS</strong></td>
-              <td class="infoline"><div align="right"><strong></strong></div></td>
-              <td class="infoline"><div align="right"><strong>10,530.00</strong></div></td>
-              <td class="infoline"><div align="right"><strong></strong></div></td>
-              <td class="infoline"><div align="right"><strong>60,020.80 </strong></div></td>
-              <td class="infoline"><div align="right"><strong>47,159.86</strong></div></td>
-              <td class="infoline"><div align="right"><strong>107,357.06</strong> </div></td>
+              <td colspan="2" align="left" style="background-color:#C3C3C3;"><strong>COST LIMITS</strong></td>
+              <td style="background-color:#C3C3C3;"><div align="right"><strong></strong></div></td>
+              <td style="background-color:#C3C3C3;"><div align="right"><strong>10,530.00</strong></div></td>
+              <td style="background-color:#C3C3C3;"><div align="right"><strong></strong></div></td>
+              <td style="background-color:#C3C3C3;"><div align="right"><strong>60,020.80 </strong></div></td>
+              <td style="background-color:#C3C3C3;"><div align="right"><strong>47,159.86</strong></div></td>
+              <td style="background-color:#C3C3C3;"><div align="right"><strong>107,357.06</strong> </div></td>
             </tr>
           </table>
         </div>
