--- a/kra-awa-dev/abud-distincome.html
+++ b/kra-awa-dev/abud-distincome.html
@@ -120,7 +120,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <th scope="col" > <label for="fiscal year">Fiscal Year</label></th>
                 <th scope="col" > <label for="percentage">Percentage</label></th>
                 <th scope="col" > <label for="source account">Source</label></th>
-                <th scope="col" width="120" > <label for="amount">Amount</label></th>
+                <th scope="col" style="width:120px;" > <label for="amount">Amount</label></th>
               </tr>
               <tr>
                 <th scope="col"> <div align="right"> 1</div></th>
@@ -179,18 +179,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope=row><div align="right">Budget Change: 07/05/2008 - 06/19/2009:</div></th>
-                <td width="120px"><div align="right">$1,300.00</div></td>
-                <th   width="120px" > <div align="right"></div></th>
+                <td style="width:130px;"><div align="right">$1,300.00</div></td>
               </tr>
               <tr>
                 <th scope=row><div align="right">Previous Budget: 06/05/2009 - 06/19/2009:</div></th>
                 <td><div align="right">$800.00 </div></td>
-                <th ><div align="right"></div></th>
               </tr>
               <tr>
                 <th scope=row><div align="right">Total Cost Sharing:</div></th>
                 <td><div align="right">$2,100.00</div></td>
-                <th><div align="right"></div></th>
               </tr>
             </table>
             <a href="#"><br>
@@ -266,18 +263,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="row"> <div align="right"> Budget Change: 07/05/2008 - 06/19/2009:</div></th>
-                <td width="120"><div align="right">$650.00 </div></td>
-                <th   width="120px" > <div align="right"></div></th>
+                <td  style="width:130px;"><div align="right">$650.00 </div></td>
               </tr>
               <tr>
                 <th height="21" scope="row"> <div align="right"> Previous Budget: 07/05/2008 - 03/01/2009:</div></th>
                 <td><div align="right">$650.00 </div></td>
-                <th ><div align="right"></div></th>
               </tr>
               <tr>
                 <th scope="col"> <div align="right"> Total:</div></th>
                 <td><div align="right"> $1,300.00 </div></td>
-                <th><div align="right"></div></th>
               </tr>
             </table>
           <a href="#"><br>
