--- a/kra-awa-dev/abud-budactions.html
+++ b/kra-awa-dev/abud-budactions.html
@@ -194,8 +194,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <table  cellpadding="0" cellspacing="0"  summary="">
                     <tbody>
                         <tr>
-                            <th>Item</th>
-                            <th style="width:65px;">Action</th>
+                            <th>Document</th>
+                            <th style="width:65px;">Actions</th>
                         </tr>
                         <tr>
                             <td>Budget Summary by Period</td>
